# problem_practice

./: README.md
CodeCrafters/codecrafters-git-python/: README.md  pyproject.toml
CodeCrafters/codecrafters-git-python/app/: main.py
CodeCrafters/codecrafters-shell-cpp/: README.md
CodeCrafters/codecrafters-shell-cpp/src/: main.cpp
LeetCode/: README.md
LeetCode/Easy/121_best_time_to_buy_and_sell_stock/: solution.py  test.py
LeetCode/Easy/125_valid_palindrome/: main.py  solution.py  test.py
LeetCode/Easy/141_linked_list_cycle/: test.py
LeetCode/Easy/1_two_sum/: main.py  solution.py  test.py
LeetCode/Easy/206_reverse_linked_list/: solution.py
LeetCode/Easy/20_valid_parentheses/: main.c
LeetCode/Easy/217_contains_duplicate/: solution.py  test.py
LeetCode/Easy/242_valid_anagram/: main.py  solution.py  test.py
LeetCode/Easy/26_remove_duplicates_from_sorted_array/: .gitignore  main.c
LeetCode/Easy/27_remove_element/: solution.c  test.c
LeetCode/Easy/35_search_insert_position/: main.py  solution.py  test.py
LeetCode/Easy/704_binary_search/: README.md  solution.py
LeetCode/Hard/239_sliding_window_maximum/: main.py  solution.py
LeetCode/Hard/23_merge_k_sorted_lists/: helper.h  main.c
LeetCode/templates/python/: main.py  (+3 more)
Medium/11_container_with_most_water/: CMakeLists.txt  test.cpp
Medium/12_integer_to_roman/: CMakeLists.txt  main.cpp  solution.hpp  test.cpp
Medium/15_3sum/: solution.hpp
gymnasium_environments/: pyproject.toml
gymnasium_environments/CartPole-v1/: solution.py
leet_code/: create.sh  write_tests.sh
leetcode/: create.sh
(+1028 files in other folders)
