[project]
name = "gymnasium-environments"
version = "0.1.0"
description = ""
authors = [
    {name = "Nate Stott",email = "nate.stott@pm.me"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium (>=1.2.0,<2.0.0)",
    "gymnasium[classic-control]",
    "pygame (>=2.6.1,<3.0.0)",
    "notebook (>=7.4.5,<8.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
